updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an Ecommerce Manager for a wrapping paper company</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>St. Simons Island, GA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love the beach, running, coffee, and hanging out with my dogs!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Professional dog walker...but a Web Developer will do too ;) (would love to become a developer for a health and wellness or sports company)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Charleston, SC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be able to create things myself! I love problem solving and I love "behind the scenes" work and seeing that come to life on the front-end.</p>
     </section>
 
     <footer id="footer">
